Changelog
=========

6.6-dev - (unreleased)
----------------------

6.5 - (2013-10-22)
------------------
* Bug fix: Always show the Archive action in the workflow state menu, even
  if the workflow is simplified and the Advanced page doesn't appear
  [tiberich #9327]
* Bug fix: added documentation for the publish dialog; only enable the publish
  dialog for Assessments and Specifications
  [tiberich #17221]

6.4 - (2013-10-04)
------------------
* Bug fix: fix label in viewlet
  [tiberich #9327]

6.3 - (2013-10-04)
------------------
* Change: fixed pylint and jslint warnings
  [tiberich #16960]

6.2 - (2013-10-04)
------------------
* Feature: it is now possible to mark content as archived. Details about the
  archival reasons are added through a popup dialog.
  [tiberich #9327]

6.1 - (2013-09-23)
------------------
* Bug fix: fix security problem with Plone 4.3
  [tiberich #16698]

6.0 - (2013-09-06)
------------------
* Feature: now handle with ajax all workflow state changes. The publish
  dialog javascript has been updated to integrate with this new script
  [tiberich #15629]

5.9 - (2013-08-09)
------------------
* Bug fix: get rid of kss support for publish_dialog, with no backwards dependency.
  From now on, eea.workflow needs Plone 4.3 for the publish dialog to work properly.
  [tiberich #15587]

5.8 - (2013-07-09)
------------------
* Bug fix: Fix ZCML dependencies and cleanup to work with Plone 4.2
  [voineali refs 14901]

5.7 - (2013-05-20)
------------------
* Bug fix: improved debugging information for readiness info
  [tiberich]
* Feature: look for a named IValueProvider adapter when calculating
  value of fields
  [tiberich #14361]
* Bug fix: change code to conform to eea.versions API changes
  [tiberich #14008]

5.6 - (2013-04-17)
------------------
* Feature: Added a self.value_info() mapping to IValueProvider
  [tiberich #14175]
* Bug fix: don't allow deleting the effective date when bulk publishing
  [tiberich #14220]

5.5 - (2013-01-25)