@@ -105,6 +105,12 @@ ArchiveDialog.Window.prototype.handle_ok = function(e){
     return false;
 };
 
+function get_base(){
+    var base = (window.context_url || jQuery("base").attr('href') || document.baseURI ||
+                window.location.href.split("?")[0].split('@@')[0]);
+    return base;
+}
+
 ArchiveDialog.Window.prototype._open = function(ui){
     var self = this;
 
