@@ -3,6 +3,9 @@ Changelog
 
 6.6-dev - (unreleased)
 ----------------------
+* Bug fix: also define get_base in archive_dialog.js as publish_dialog.js is 
+  not always loaded
+  [tiberich #17303]
 
 6.5 - (2013-10-22)
 ------------------
